Fix margins so that there is no white space on right side

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@ li {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   flex: 1;
 }
@@ -42,7 +42,6 @@ li {
   top: 0;
   margin: 0;
   height: 100vh;
-  
 }
 
 .contact-list {
@@ -68,16 +67,16 @@ li {
   display: grid;
   grid-template-columns: auto 2fr 2fr 2fr 2fr auto;
   grid-template-rows: 1fr 1fr;
-  border: 1px solid white;
+  border-bottom: 1px solid white;
   font-size: 25px
 }
 
-.task-box > div {
+/* .task-box > div {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   padding: 5px;
-}
+} */
 
 
 .checkbox {
@@ -109,7 +108,6 @@ li {
   grid-row-start: 2;
   display: flex;
   flex-direction: column;
-
 }
 
 .task-box > .date-due {
@@ -172,21 +170,20 @@ li {
 }
 
 .contact {
-  border: solid 1px white;
+  border-bottom: solid 1px white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: 10px;
 }
 
 .navbar {
   margin: 0;
-  padding: 10px;
-  min-width: 100vw;
-  border: solid 1px white;
+  border-bottom: solid 1px white;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .login {
@@ -227,17 +224,16 @@ li {
 
 .navbar > h1 {
   margin-left: 15px;
-
 }
 
 
 
 .footer {
-  min-width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid 1px white;;
+  border-top: solid 1px white;;
 }
 
 .name {
@@ -245,9 +241,6 @@ li {
   padding-right: 5px;
 }
 
-.to-do {
-  padding-right: 10px;
-}
 
 @media only screen and (max-width: 650px) {
   .task-box {
